test/classes/bradc/syncAsClass2.good
syncAsClass2.chpl:5: error: cannot initialize 'myObject' of type 'borrowed object?' from a 'sync int(64)'
